cmake_minimum_required(VERSION 3.23)
project(Concordia_Courses)

set(CMAKE_CXX_STANDARD 14)

#ex05
#add_executable(Concordia_Courses  COEN_244_S_2224/TUT-04/review_exercises/ex05/Point.cpp COEN_244_S_2224/TUT-04/review_exercises/ex05/Point.h COEN_244_S_2224/TUT-04/review_exercises/ex05/driver.cpp COEN_244_S_2224/TUT-04/review_exercises/ex05/Rectangle.cpp COEN_244_S_2224/TUT-04/review_exercises/ex05/Rectangle.h)

#ex06
#add_executable(Concordia_Courses COEN_244_S_2224/TUT-04/review_exercises/ex06/driver.cpp COEN_244_S_2224/TUT-04/review_exercises/ex06/Point.cpp COEN_244_S_2224/TUT-04/review_exercises/ex06/Point.h COEN_244_S_2224/TUT-04/review_exercises/ex06/Rectangle.cpp COEN_244_S_2224/TUT-04/review_exercises/ex06/Rectangle.h)

#ex07
#add_executable(Concordia_Courses COEN_244_S_2224/TUT-04/review_exercises/ex07/driver.cpp COEN_244_S_2224/TUT-04/review_exercises/ex07/Account.cpp COEN_244_S_2224/TUT-04/review_exercises/ex07/Account.h COEN_244_S_2224/TUT-04/review_exercises/ex07/Owner.cpp COEN_244_S_2224/TUT-04/review_exercises/ex07/Owner.h)

#ex08
#add_executable(Concordia_Courses COEN_244_S_2224/TUT-04/review_exercises/ex08/driver.cpp COEN_244_S_2224/TUT-04/review_exercises/ex08/Account.cpp COEN_244_S_2224/TUT-04/review_exercises/ex08/Account.h COEN_244_S_2224/TUT-04/review_exercises/ex08/Owner.cpp COEN_244_S_2224/TUT-04/review_exercises/ex08/Owner.h)

#ex09
#add_executable(Concordia_Courses COEN_244_S_2224/TUT-04/review_exercises/ex09/driver.cpp COEN_244_S_2224/TUT-04/review_exercises/ex09/Rectangle.cpp COEN_244_S_2224/TUT-04/review_exercises/ex09/Rectangle.h)

#ex10
#add_executable(Concordia_Courses COEN_244_S_2224/TUT-04/review_exercises/ex10/driver.cpp COEN_244_S_2224/TUT-04/review_exercises/ex10/A.cpp COEN_244_S_2224/TUT-04/review_exercises/ex10/A.h COEN_244_S_2224/TUT-04/review_exercises/ex10/B.cpp COEN_244_S_2224/TUT-04/review_exercises/ex10/B.h)

#ex09_23
#add_executable(Concordia_Courses COEN_244_S_2224/TUT-04/ex09_23/Card.cpp COEN_244_S_2224/TUT-04/ex09_23/Card.h COEN_244_S_2224/TUT-04/ex09_23/DeckOfCards.h COEN_244_S_2224/TUT-04/ex09_23/DeckOfCards.cpp COEN_244_S_2224/TUT-04/ex09_23/ex09_23.cpp)

#ex09_24
add_executable(Concordia_Courses COEN_244_S_2224/TUT-04/ex09_24/Card.cpp COEN_244_S_2224/TUT-04/ex09_24/Card.h COEN_244_S_2224/TUT-04/ex09_24/DeckOfCards.h COEN_244_S_2224/TUT-04/ex09_24/DeckOfCards.cpp COEN_244_S_2224/TUT-04/ex09_24/ex09_24.cpp COEN_244_S_2224/TUT-04/ex09_24/Hand.h COEN_244_S_2224/TUT-04/ex09_24/Hand.cpp)